# migrado

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.dev  requirements.txt  tests.Dockerfile
.github/workflows/: main.yml
migrado/: __init__.py  constants.py  db_client.py  migrado.py  utils.py
tests/: conftest.py  test_db.py  test_migrado.py  test_schema.yml  test_schema_updated.yml  test_utils.py
