[tool.poetry]
name = "migrado"
version = "0.5.2"
description = "ArangoDB migrations and batch processing manager"
authors = ["Eirik Krogstad <eirikkr@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/protojour/migrado"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
python-arango = "^7.1.0"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "^5.2"
pytest-cov = "^2.8"

[tool.poetry.scripts]
migrado = "migrado:migrado"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
