[tool.poetry]
name = "migrado"
version = "0.6.3"
description = "ArangoDB migrations and batch processing manager"
authors = ["Eirik Krogstad <eirikkr@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/protojour/migrado"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
python-arango = "^7.1.0"
pyyaml = "^5.4.1"
rich = "^10.12.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
migrado = "migrado:migrado"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
