[tool.poetry]
name = "migrado"
version = "0.6.11"
description = "ArangoDB migrations and batch processing manager"
authors = ["Eirik Krogstad <eirikkr@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/protojour/migrado"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
python-arango = "^7.7.0"
pyyaml = "^6.0.1"
rich = "^10.12.0"

[tool.poetry.scripts]
migrado = "migrado:migrado"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
